src/test/ui/type-alias-impl-trait/issue-68368-non-defining-use.stderr
error: defining opaque type use does not fully define opaque type: generic parameter `U` is specified as concrete type `()`
  --> $DIR/issue-68368-non-defining-use.rs:8:1
   |
LL | fn f<'a>() -> Alias<'a, ()> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

